pass svg directly to fix svg flickering

--- a/typescript/web/src/index.scss
+++ b/typescript/web/src/index.scss
@@ -26,11 +26,6 @@
     background: var(--color-btn-hover-bg);
 }
 
-.markdown-it-copy-block svg {
-    height: 18px;
-    width: 18px;
-}
-
 .copied {
     top: 0;
     right: calc(100% + 10px);
